// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataProductAvailability - BasicAvailabilityInterface renders with explicit sort method 1`] = `
<div
  data-selenium="data-product-availability"
  style={
    Object {
      "minWidth": "153px",
      "width": "100%",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-row-reverse"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
        >
          <div
            className="makeStyles-topFormHeader-2"
          >
            <h6
              className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
            >
              Sites
            </h6>
          </div>
          <div
            style={
              Object {
                "marginBottom": 12,
                "marginTop": 8,
              }
            }
          >
            <div
              className="MuiChip-root MuiChip-colorPrimary MuiChip-deletableColorPrimary MuiChip-deletable"
              data-selenium="site-chip"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              style={
                Object {
                  "borderRadius": "20px",
                  "fontSize": "1rem",
                  "height": "40px",
                }
              }
              tabIndex={0}
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar makeStyles-avatarLarge-11 MuiChip-avatarColorPrimary MuiAvatar-colorDefault"
                style={
                  Object {
                    "backgroundColor": "#0073cf",
                    "height": "40px",
                    "marginLeft": "0px",
                    "width": "40px",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
              </div>
              <span
                className="MuiChip-label"
              >
                3 sites
              </span>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorPrimary"
                focusable="false"
                onClick={[Function]}
                style={
                  Object {
                    "height": "32px",
                    "margin": "0 6px 0 0",
                    "width": "32px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.select-all-sites-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Sites
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <div>
              <button
                aria-describedby={null}
                aria-label="Select sites using the observatory map"
                className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
                data-selenium="map-selection-button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "marginLeft": 8,
                  }
                }
                tabIndex={0}
                title="Select sites using the observatory map"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <span
                    className="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                      />
                    </svg>
                  </span>
                  Map
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
        >
          <h6
            className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          >
            Date Range
          </h6>
          <div
            style={
              Object {
                "display": "flex",
                "flexWrap": "nowrap",
              }
            }
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-start"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink={false}
              >
                Start
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="February 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      Start
                    </span>
                  </legend>
                </fieldset>
              </div>
              
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-end"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined Mui-error Mui-error"
                data-shrink={false}
              >
                End
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={true}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="May 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      End
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-marginDense"
              >
                Date should not be after maximal date
              </p>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "marginTop": 8,
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.all-years-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Years
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.latest-year-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "marginLeft": 8,
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select Latest Year
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="MuiCardContent-root makeStyles-helpGridContainer-8"
            >
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23 5.5V20c0 2.2-1.8 4-4 4h-7.3c-1.08 0-2.1-.43-2.85-1.19L1 14.83s1.26-1.23 1.3-1.25c.22-.19.49-.29.79-.29.22 0 .42.06.6.16.04.01 4.31 2.46 4.31 2.46V4c0-.83.67-1.5 1.5-1.5S11 3.17 11 4v7h1V1.5c0-.83.67-1.5 1.5-1.5S15 .67 15 1.5V11h1V2.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5V11h1V5.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag the grid to pan across time
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74zm9.84 4.63l-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Click rows to select sites
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  style={
                    Object {
                      "transform": "rotate(90deg)",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 19h3v4h2v-4h3l-4-4-4 4zm8-14h-3V1h-2v4H8l4 4 4-4zM4 11v2h16v-2H4z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag selection edges to adjust dates
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
    >
      <div
        data-selenium="data-product-availability.view-options"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <h6
          className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          style={
            Object {
              "marginRight": 12,
              "whiteSpace": "nowrap",
            }
          }
        >
          View By:
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <h6
        className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        Key:
      </h6>
      <div
        className="makeStyles-legendContainer-25"
      >
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="90"
        >
          <rect
            fill="#002c77"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={0}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={9}
          >
            Available
          </text>
          <rect
            fill="#d7d9d9"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={20}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={29}
          >
            No data
          </text>
        </svg>
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="210"
        >
          <rect
            fill="#0073cf"
            height={10}
            width={45}
            x={0.5}
            y={1.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={0.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={0.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={9}
          >
            All sites selected
          </text>
          <rect
            fill="#8abfec"
            height={10}
            width={45}
            x={0.5}
            y={21.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={20.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={20.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={29}
          >
            Some sites selected
          </text>
        </svg>
      </div>
    </div>
  </div>
  <svg
    className="makeStyles-svg-1"
    height={68}
    id="dpa-3"
  />
</div>
`;

exports[`DataProductAvailability - BasicAvailabilityInterface renders with no props 1`] = `
<div
  data-selenium="data-product-availability"
  style={
    Object {
      "minWidth": "153px",
      "width": "100%",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-row-reverse"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
        >
          <div
            className="makeStyles-topFormHeader-2"
          >
            <h6
              className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
            >
              Sites
            </h6>
          </div>
          <div
            style={
              Object {
                "marginBottom": 12,
                "marginTop": 8,
              }
            }
          >
            <div
              className="MuiChip-root MuiChip-colorPrimary MuiChip-deletableColorPrimary MuiChip-deletable"
              data-selenium="site-chip"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              style={
                Object {
                  "borderRadius": "20px",
                  "fontSize": "1rem",
                  "height": "40px",
                }
              }
              tabIndex={0}
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar makeStyles-avatarLarge-11 MuiChip-avatarColorPrimary MuiAvatar-colorDefault"
                style={
                  Object {
                    "backgroundColor": "#0073cf",
                    "height": "40px",
                    "marginLeft": "0px",
                    "width": "40px",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
              </div>
              <span
                className="MuiChip-label"
              >
                3 sites
              </span>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorPrimary"
                focusable="false"
                onClick={[Function]}
                style={
                  Object {
                    "height": "32px",
                    "margin": "0 6px 0 0",
                    "width": "32px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.select-all-sites-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Sites
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <div>
              <button
                aria-describedby={null}
                aria-label="Select sites using the observatory map"
                className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
                data-selenium="map-selection-button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "marginLeft": 8,
                  }
                }
                tabIndex={0}
                title="Select sites using the observatory map"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <span
                    className="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                      />
                    </svg>
                  </span>
                  Map
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
        >
          <h6
            className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          >
            Date Range
          </h6>
          <div
            style={
              Object {
                "display": "flex",
                "flexWrap": "nowrap",
              }
            }
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-start"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink={false}
              >
                Start
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="February 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      Start
                    </span>
                  </legend>
                </fieldset>
              </div>
              
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-end"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined Mui-error Mui-error"
                data-shrink={false}
              >
                End
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={true}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="May 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      End
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-marginDense"
              >
                Date should not be after maximal date
              </p>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "marginTop": 8,
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.all-years-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Years
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.latest-year-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "marginLeft": 8,
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select Latest Year
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="MuiCardContent-root makeStyles-helpGridContainer-8"
            >
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23 5.5V20c0 2.2-1.8 4-4 4h-7.3c-1.08 0-2.1-.43-2.85-1.19L1 14.83s1.26-1.23 1.3-1.25c.22-.19.49-.29.79-.29.22 0 .42.06.6.16.04.01 4.31 2.46 4.31 2.46V4c0-.83.67-1.5 1.5-1.5S11 3.17 11 4v7h1V1.5c0-.83.67-1.5 1.5-1.5S15 .67 15 1.5V11h1V2.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5V11h1V5.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag the grid to pan across time
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74zm9.84 4.63l-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Click rows to select sites
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  style={
                    Object {
                      "transform": "rotate(90deg)",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 19h3v4h2v-4h3l-4-4-4 4zm8-14h-3V1h-2v4H8l4 4 4-4zM4 11v2h16v-2H4z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag selection edges to adjust dates
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
    >
      <div
        data-selenium="data-product-availability.view-options"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <h6
          className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          style={
            Object {
              "marginRight": 12,
              "whiteSpace": "nowrap",
            }
          }
        >
          View By:
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <h6
        className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        Key:
      </h6>
      <div
        className="makeStyles-legendContainer-25"
      >
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="90"
        >
          <rect
            fill="#002c77"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={0}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={9}
          >
            Available
          </text>
          <rect
            fill="#d7d9d9"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={20}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={29}
          >
            No data
          </text>
        </svg>
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="210"
        >
          <rect
            fill="#0073cf"
            height={10}
            width={45}
            x={0.5}
            y={1.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={0.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={0.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={9}
          >
            All sites selected
          </text>
          <rect
            fill="#8abfec"
            height={10}
            width={45}
            x={0.5}
            y={21.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={20.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={20.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={29}
          >
            Some sites selected
          </text>
        </svg>
      </div>
    </div>
  </div>
  <svg
    className="makeStyles-svg-1"
    height={20}
    id="dpa-1"
  />
</div>
`;

exports[`DataProductAvailability - BasicAvailabilityInterface renders with selection disabled 1`] = `
<div
  data-selenium="data-product-availability"
  style={
    Object {
      "minWidth": "153px",
      "width": "100%",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-row-reverse"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
    >
      <div
        data-selenium="data-product-availability.view-options"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <h6
          className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          style={
            Object {
              "marginRight": 12,
              "whiteSpace": "nowrap",
            }
          }
        >
          View By:
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <h6
        className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        Key:
      </h6>
      <div
        className="makeStyles-legendContainer-25"
      >
        <svg
          className="makeStyles-legendSvg-26"
          height={16}
          width={230}
        >
          <rect
            fill="#002c77"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={0}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={9}
          >
            Available
          </text>
          <rect
            fill="#d7d9d9"
            height={12}
            rx={1}
            width={7}
            x={115}
            y={0}
          />
          <text
            className="makeStyles-legendText-27"
            x={130}
            y={9}
          >
            No data
          </text>
        </svg>
      </div>
    </div>
  </div>
  <svg
    className="makeStyles-svg-1"
    height={68}
    id="dpa-5"
  />
</div>
`;

exports[`DataProductAvailability - BasicAvailabilityInterface renders with siteCodes and view 1`] = `
<div
  data-selenium="data-product-availability"
  style={
    Object {
      "minWidth": "153px",
      "width": "100%",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-row-reverse"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
        >
          <div
            className="makeStyles-topFormHeader-2"
          >
            <h6
              className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
            >
              Sites
            </h6>
          </div>
          <div
            style={
              Object {
                "marginBottom": 12,
                "marginTop": 8,
              }
            }
          >
            <div
              className="MuiChip-root MuiChip-colorPrimary MuiChip-deletableColorPrimary MuiChip-deletable"
              data-selenium="site-chip"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              style={
                Object {
                  "borderRadius": "20px",
                  "fontSize": "1rem",
                  "height": "40px",
                }
              }
              tabIndex={0}
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar makeStyles-avatarLarge-11 MuiChip-avatarColorPrimary MuiAvatar-colorDefault"
                style={
                  Object {
                    "backgroundColor": "#0073cf",
                    "height": "40px",
                    "marginLeft": "0px",
                    "width": "40px",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
              </div>
              <span
                className="MuiChip-label"
              >
                3 sites
              </span>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorPrimary"
                focusable="false"
                onClick={[Function]}
                style={
                  Object {
                    "height": "32px",
                    "margin": "0 6px 0 0",
                    "width": "32px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.select-all-sites-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Sites
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <div>
              <button
                aria-describedby={null}
                aria-label="Select sites using the observatory map"
                className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
                data-selenium="map-selection-button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "marginLeft": 8,
                  }
                }
                tabIndex={0}
                title="Select sites using the observatory map"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <span
                    className="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                      />
                    </svg>
                  </span>
                  Map
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
        >
          <h6
            className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          >
            Date Range
          </h6>
          <div
            style={
              Object {
                "display": "flex",
                "flexWrap": "nowrap",
              }
            }
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-start"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink={false}
              >
                Start
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="February 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      Start
                    </span>
                  </legend>
                </fieldset>
              </div>
              
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-end"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined Mui-error Mui-error"
                data-shrink={false}
              >
                End
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={true}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="May 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      End
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-marginDense"
              >
                Date should not be after maximal date
              </p>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "marginTop": 8,
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.all-years-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Years
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.latest-year-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "marginLeft": 8,
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select Latest Year
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="MuiCardContent-root makeStyles-helpGridContainer-8"
            >
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23 5.5V20c0 2.2-1.8 4-4 4h-7.3c-1.08 0-2.1-.43-2.85-1.19L1 14.83s1.26-1.23 1.3-1.25c.22-.19.49-.29.79-.29.22 0 .42.06.6.16.04.01 4.31 2.46 4.31 2.46V4c0-.83.67-1.5 1.5-1.5S11 3.17 11 4v7h1V1.5c0-.83.67-1.5 1.5-1.5S15 .67 15 1.5V11h1V2.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5V11h1V5.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag the grid to pan across time
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74zm9.84 4.63l-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Click rows to select sites
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  style={
                    Object {
                      "transform": "rotate(90deg)",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 19h3v4h2v-4h3l-4-4-4 4zm8-14h-3V1h-2v4H8l4 4 4-4zM4 11v2h16v-2H4z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag selection edges to adjust dates
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
    >
      <div
        data-selenium="data-product-availability.view-options"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <h6
          className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          style={
            Object {
              "marginRight": 12,
              "whiteSpace": "nowrap",
            }
          }
        >
          View By:
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <h6
        className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        Key:
      </h6>
      <div
        className="makeStyles-legendContainer-25"
      >
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="90"
        >
          <rect
            fill="#002c77"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={0}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={9}
          >
            Available
          </text>
          <rect
            fill="#d7d9d9"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={20}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={29}
          >
            No data
          </text>
        </svg>
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="210"
        >
          <rect
            fill="#0073cf"
            height={10}
            width={45}
            x={0.5}
            y={1.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={0.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={0.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={9}
          >
            All sites selected
          </text>
          <rect
            fill="#8abfec"
            height={10}
            width={45}
            x={0.5}
            y={21.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={20.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={20.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={29}
          >
            Some sites selected
          </text>
        </svg>
      </div>
    </div>
  </div>
  <svg
    className="makeStyles-svg-1"
    height={68}
    id="dpa-2"
  />
</div>
`;

exports[`DataProductAvailability - BasicAvailabilityInterface renders with ungrouped view 1`] = `
<div
  data-selenium="data-product-availability"
  style={
    Object {
      "minWidth": "153px",
      "width": "100%",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-row-reverse"
    style={
      Object {
        "marginBottom": 8,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-6"
        >
          <div
            className="makeStyles-topFormHeader-2"
          >
            <h6
              className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
            >
              Sites
            </h6>
          </div>
          <div
            style={
              Object {
                "marginBottom": 12,
                "marginTop": 8,
              }
            }
          >
            <div
              className="MuiChip-root MuiChip-colorPrimary MuiChip-deletableColorPrimary MuiChip-deletable"
              data-selenium="site-chip"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              style={
                Object {
                  "borderRadius": "20px",
                  "fontSize": "1rem",
                  "height": "40px",
                }
              }
              tabIndex={0}
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar makeStyles-avatarLarge-11 MuiChip-avatarColorPrimary MuiAvatar-colorDefault"
                style={
                  Object {
                    "backgroundColor": "#0073cf",
                    "height": "40px",
                    "marginLeft": "0px",
                    "width": "40px",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
              </div>
              <span
                className="MuiChip-label"
              >
                3 sites
              </span>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiChip-deleteIcon MuiChip-deleteIconColorPrimary"
                focusable="false"
                onClick={[Function]}
                style={
                  Object {
                    "height": "32px",
                    "margin": "0 6px 0 0",
                    "width": "32px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.select-all-sites-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Sites
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <div>
              <button
                aria-describedby={null}
                aria-label="Select sites using the observatory map"
                className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
                data-selenium="map-selection-button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "marginLeft": 8,
                  }
                }
                tabIndex={0}
                title="Select sites using the observatory map"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <span
                    className="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      aria-hidden={true}
                      className="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                      />
                    </svg>
                  </span>
                  Map
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-6"
        >
          <h6
            className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          >
            Date Range
          </h6>
          <div
            style={
              Object {
                "display": "flex",
                "flexWrap": "nowrap",
              }
            }
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-start"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "marginRight": 12,
                }
              }
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
                data-shrink={false}
              >
                Start
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="February 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      Start
                    </span>
                  </legend>
                </fieldset>
              </div>
              
            </div>
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
              data-selenium="data-product-availability.date-range-end"
              format="MMMM YYYY"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <label
                className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined Mui-error Mui-error"
                data-shrink={false}
              >
                End
              </label>
              <div
                className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={true}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={true}
                  required={false}
                  type="text"
                  value="May 2020"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    className="PrivateNotchedOutline-legendLabelled-23"
                  >
                    <span>
                      End
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-marginDense"
              >
                Date should not be after maximal date
              </p>
            </div>
          </div>
          <div
            style={
              Object {
                "display": "flex",
                "marginTop": 8,
              }
            }
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.all-years-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select All Years
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              data-selenium="data-product-availability.latest-year-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "marginLeft": 8,
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Select Latest Year
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <div
            className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              className="MuiCardContent-root makeStyles-helpGridContainer-8"
            >
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23 5.5V20c0 2.2-1.8 4-4 4h-7.3c-1.08 0-2.1-.43-2.85-1.19L1 14.83s1.26-1.23 1.3-1.25c.22-.19.49-.29.79-.29.22 0 .42.06.6.16.04.01 4.31 2.46 4.31 2.46V4c0-.83.67-1.5 1.5-1.5S11 3.17 11 4v7h1V1.5c0-.83.67-1.5 1.5-1.5S15 .67 15 1.5V11h1V2.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5V11h1V5.5c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag the grid to pan across time
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74zm9.84 4.63l-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Click rows to select sites
                </div>
              </div>
              <div
                className="makeStyles-helpGrid-9"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root makeStyles-helpIcon-7"
                  focusable="false"
                  style={
                    Object {
                      "transform": "rotate(90deg)",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 19h3v4h2v-4h3l-4-4-4 4zm8-14h-3V1h-2v4H8l4 4 4-4zM4 11v2h16v-2H4z"
                  />
                </svg>
                <div
                  className="MuiTypography-root MuiTypography-body1"
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                >
                  Drag selection edges to adjust dates
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-6"
    >
      <div
        data-selenium="data-product-availability.sort-options"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <h6
          className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
          style={
            Object {
              "marginRight": 12,
              "whiteSpace": "nowrap",
            }
          }
        >
          Sort By:
        </h6>
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "flex-end",
            }
          }
        >
          <div
            className="MuiFormControl-root"
          >
            <div
              ComponentPath="@material-ui/core/Select"
              prop-aria-label="Sort Method"
              prop-className="makeStyles-sortSelect-6"
              prop-data-selenium="data-product-availability.sort-options.method"
              prop-onChange="function handleChangeSortMethod(event) {
    /* istanbul ignore next */
    cov_1nv0xggsxg.f[31]++;
    var newSortMethod =
    /* istanbul ignore next */
    (cov_1nv0xggsxg.s[100]++, event.target.value);

    /* istanbul ignore next */
    cov_1nv0xggsxg.s[101]++;

    if (
    /* istanbul ignore next */
    (cov_1nv0xggsxg.b[23][0]++, !Object.keys(SORT_METHODS).includes(newSortMethod)) ||
    /* istanbul ignore next */
    (cov_1nv0xggsxg.b[23][1]++, currentSortMethod === newSortMethod)) {
      /* istanbul ignore next */
      cov_1nv0xggsxg.b[22][0]++;
      cov_1nv0xggsxg.s[102]++;
      return;
    } else
    /* istanbul ignore next */
    {
      cov_1nv0xggsxg.b[22][1]++;
    }

    cov_1nv0xggsxg.s[103]++;

    if (downloadContextIsActive) {
      /* istanbul ignore next */
      cov_1nv0xggsxg.b[24][0]++;
      cov_1nv0xggsxg.s[104]++;
      dispatchSelection({
        type: 'setAvailabilitySortMethod',
        value: newSortMethod
      });
    } else
    /* istanbul ignore next */
    {
      cov_1nv0xggsxg.b[24][1]++;
    }

    cov_1nv0xggsxg.s[105]++;
    setCurrentSortMethod(newSortMethod);

    /* istanbul ignore next */
    cov_1nv0xggsxg.s[106]++;
    applySort();
  }"
              prop-value="states"
            >
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
                value="states"
              >
                by State
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
                value="domains"
              >
                by Domain
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
              <li
                aria-disabled={false}
                className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                onBlur={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="menuitem"
                tabIndex={-1}
                value="sites"
              >
                by Site
                <span
                  className="MuiTouchRipple-root"
                />
              </li>
            </div>
          </div>
          <div
            className="MuiToggleButtonGroup-root"
            data-selenium="data-product-availability.sort-options.direction"
            role="group"
          >
            <button
              aria-label="Sort Ascending (A-Z)"
              aria-pressed={true}
              className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal Mui-selected MuiToggleButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              title="Sort Ascending (A-Z)"
              type="button"
              value="ASC"
            >
              <span
                className="MuiToggleButton-label"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Sort Descending (Z-A)"
              aria-pressed={false}
              className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              title="Sort Descending (Z-A)"
              type="button"
              value="DESC"
            >
              <span
                className="MuiToggleButton-label"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <h6
        className="MuiTypography-root makeStyles-h6Small-4 MuiTypography-h6"
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        Key:
      </h6>
      <div
        className="makeStyles-legendContainer-25"
      >
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="90"
        >
          <rect
            fill="#002c77"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={0}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={9}
          >
            Available
          </text>
          <rect
            fill="#d7d9d9"
            height={12}
            rx={1}
            width={7}
            x={0}
            y={20}
          />
          <text
            className="makeStyles-legendText-27"
            x={15}
            y={29}
          >
            No data
          </text>
        </svg>
        <svg
          className="makeStyles-legendSvg-26"
          height={36}
          width="210"
        >
          <rect
            fill="#0073cf"
            height={10}
            width={45}
            x={0.5}
            y={1.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={0.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={0.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={9}
          >
            All sites selected
          </text>
          <rect
            fill="#8abfec"
            height={10}
            width={45}
            x={0.5}
            y={21.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={0.5}
            y={20.5}
          />
          <rect
            fill="#5ca6e3"
            height={12}
            stroke="#0073cf"
            strokeWidth={1.5}
            width={4}
            x={41}
            y={20.5}
          />
          <text
            className="makeStyles-legendText-27"
            x={53}
            y={29}
          >
            Some sites selected
          </text>
        </svg>
      </div>
    </div>
  </div>
  <svg
    className="makeStyles-svg-1"
    height={68}
    id="dpa-4"
  />
</div>
`;
